# deunicode

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
scripts/: Cargo.toml  compress.rs  confusables.txt  emoji.txt  emoji1.json
src/: lib.rs  mapping.txt
tests/: unidecode.rs
