[package]
name = "unidecode-compress"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2021"

[[bin]]
name = "compress"
path = "compress.rs"

[dependencies]
serde = "1.0.180"
serde_json = "1.0.104"
serde_derive = "1.0.180"
any_ascii = "0.3.2"
emojis = "0.6.0"
unicode-normalization = "0.1.22"
